Finished the coding part of the WindowDispatcher. I resolved a bug in the execute function (previously storage occured in previous windows also, which is unnecessary). I also filled out the updateIndex and merge functions to reflect the algorithm on my notebook.